用户资料修改

--- a/BestarProject/ShoppingMall/res/layout/fragment_mine.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_mine.xml
@@ -44,6 +44,7 @@
                             android:layout_gravity="center_horizontal"
                             android:src="@drawable/head"
                             app:border_width="2dp"
+                            android:id="@+id/headLayout"
                             app:border_color="@color/blue" />
 
                         <TextView
