--- a/BestarProject/ShoppingMall/res/layout/fragment_forget_password.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_forget_password.xml
@@ -13,7 +13,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="48dip"
+            android:layout_height="@dimen/title_layout_height"
             android:background="@color/color_ffffff"
             android:padding="0dp"
             android:tag="actionBar" >
