--- a/BestarProject/ShoppingMall/res/values/dimens.xml
+++ b/BestarProject/ShoppingMall/res/values/dimens.xml
@@ -30,5 +30,6 @@
     <dimen name="btn_radius_size">5dp</dimen>
     <dimen name="list_item_title_text_size">16sp</dimen>
     <dimen name="list_item_content_text_size">13sp</dimen>
+    <dimen name="title_layout_height">48dp</dimen>
 
 </resources>
