--- a/BestarProject/ShoppingMall/res/layout/fragment_footprintlist.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_footprintlist.xml
@@ -5,7 +5,7 @@
     >
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/title_layout_height"
         android:background="@color/app_theme_color"
         android:padding="0dp"
         android:id="@+id/topLayout"
