--- a/BestarProject/ShoppingMall/res/layout/fragment_help.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_help.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dip"
+        android:layout_height="@dimen/title_layout_height"
         android:background="@color/actionbar"
         android:padding="0dp"
         android:tag="actionBar" >
