--- a/BestarProject/ShoppingMall/res/layout/fragment_my_agency.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_my_agency.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/title_layout_height"
         android:background="@color/app_theme_color"
         android:padding="0dp"
         android:tag="actionBar">
