--- a/BestarProject/ShoppingMall/res/layout/fragment_register.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_register.xml
@@ -1,103 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/register_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_bg_color"
-    android:clickable="true" >
+    android:background="@color/user_bg"
+    android:clickable="true"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="true"
-        android:orientation="vertical" >
+        android:layout_height="@dimen/title_layout_height"
+        android:background="@color/color_ffffff"
+        android:padding="0dp"
+        android:tag="actionBar"
+        tools:ignore="UselessParent">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dip"
-            android:background="@color/color_ffffff"
-            android:padding="0dp"
-            android:tag="actionBar"
-            tools:ignore="UselessParent" >
+        <ImageButton
+            android:id="@+id/register_back"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:src="@drawable/selector_back_btn" />
 
-            <ImageButton
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:background="@null"
-                android:id="@+id/register_back"
-                android:src="@drawable/back"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/register_one"
-                android:textColor="#333"
-                android:textSize="18sp" />
-        </RelativeLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/app_theme_color"
-            ></View>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            tools:ignore="UselessLeaf" >
+            android:layout_centerInParent="true"
+            android:text="@string/register_one"
+            android:textColor="#333"
+            android:textSize="18sp" />
+    </RelativeLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line_mine_color"></View>
 
-                <EditText
-                    android:id="@+id/phone_number"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@color/color_ffffff"
-                    android:gravity="center|left"
-                    android:hint="@string/register_phone_number"
-                    android:maxLength="11"
-                    android:paddingLeft="16dp"
-                    android:numeric="integer"
-                    android:textSize="16sp"
-                    android:singleLine="true"
-                    android:textColorHint="#44000000"
-                    tools:ignore="TextFields,Deprecated" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/line_mine_color"></View>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#e1e1e1"></View>
-                <EditText
-                    android:id="@+id/register_pwd"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:background="@color/color_ffffff"
-                    android:gravity="center|left"
-                    android:paddingLeft="16dp"
-                    android:hint="请输入密码"
-                    android:inputType="textPassword"
-                    android:singleLine="true"
-                    android:textColorHint="#44000000"
-                    android:maxLength="20"
-                    android:textSize="16sp"
-                    tools:ignore="TextFields,Deprecated" />
+    <EditText
+        android:id="@+id/phone_number"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
 
+        android:background="@color/color_ffffff"
+        android:gravity="center|left"
+        android:hint="@string/register_phone_number"
+        android:maxLength="11"
+        android:numeric="integer"
+        android:paddingLeft="16dp"
+        android:singleLine="true"
+        android:textColorHint="#44000000"
+        android:textSize="16sp"
+        tools:ignore="TextFields,Deprecated" />
 
-            <Button
-                android:id="@+id/register_next"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/selector_submit_btn"
-                android:text="@string/register_next"
-                android:textColor="@color/tetx_title_color"
-                android:textSize="22sp" />
-        </LinearLayout>
-    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#e1e1e1"></View>
 
-</RelativeLayout>
+    <EditText
+        android:id="@+id/register_pwd"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/color_ffffff"
+        android:gravity="center|left"
+        android:hint="请输入密码"
+        android:inputType="textPassword"
+        android:maxLength="20"
+        android:paddingLeft="16dp"
+        android:singleLine="true"
+        android:textColorHint="#44000000"
+        android:textSize="16sp"
+        tools:ignore="TextFields,Deprecated" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#e1e1e1"></View>
+
+    <Button
+        android:id="@+id/register_next"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/selector_submit_btn"
+        android:text="@string/register_next"
+        android:textColor="@color/tetx_title_color"
+        android:textSize="22sp" />
+</LinearLayout>
