--- a/BestarProject/ShoppingMall/res/layout/fragment_register_phone_check.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_register_phone_check.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/forget_password_relatitive_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_bg_color"
+    android:background="@color/user_bg"
+    android:orientation="vertical"
     android:clickable="true" >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="48dip"
-            android:background="@color/color_ffffff"
+            android:layout_height="@dimen/title_layout_height"
+            android:background="@color/user_title_layout_bg"
             android:padding="0dp"
             android:tag="actionBar" >
 
@@ -23,27 +19,17 @@
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
-                android:background="@drawable/text_down_selector"
+                android:background="@null"
                 android:gravity="center|center_horizontal"
-                android:src="@drawable/back"
+                android:src="@drawable/selector_back_btn"
                  />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="找回密码"
+                android:text="手机号验证"
                 android:layout_centerInParent="true"
                 android:textColor="#333"
                 android:textSize="18sp"
-                />
-            <TextView
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="注册"
-                android:layout_alignParentRight="true"
-                android:textColor="@color/app_theme_color"
-                android:textSize="18sp"
-                android:id="@+id/registerBtn"
                 />
         </RelativeLayout>
         <View
@@ -86,6 +72,7 @@
                 android:hint="请输入手机号码"
                 android:textColorHint="#afafaf"
                 android:inputType="phone"
+                android:maxLength="11"
                 android:singleLine="true"
                 android:textSize="16sp" />
 
@@ -98,7 +85,7 @@
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:singleLine="true"
-                android:text="发送验证码"
+                android:text="获取验证码"
                 android:textColor="@color/app_theme_color"
                 android:textSize="16sp" />
         </LinearLayout>
@@ -137,5 +124,3 @@
             android:textColor="@color/white_action"
             android:textSize="22sp" />
     </LinearLayout>
-
-</RelativeLayout>
