--- a/BestarProject/ShoppingMall/res/layout/fragment_update_password.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_update_password.xml
@@ -1,135 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/forget_password_relatitive_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_bg_color"
-    android:clickable="true" >
+    android:background="@color/user_bg"
+    android:clickable="true"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/title_layout_height"
+        android:background="@color/user_title_layout_bg"
+        android:padding="0dp"
+        android:tag="actionBar">
+
+        <ImageButton
+            android:id="@+id/updatePswBack"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:background="@null"
+            android:gravity="center|center_horizontal"
+            android:src="@drawable/selector_back_btn" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="修改密码"
+            android:textColor="#333"
+            android:textSize="18sp" />
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line_mine_color"></View>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/line_mine_color"></View>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_ffffff"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dip"
-            android:background="@color/color_ffffff"
-            android:padding="0dp"
-            android:tag="actionBar" >
-
-            <ImageButton
-                android:id="@+id/updatePswBack"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_centerVertical="true"
-                android:background="@drawable/text_down_selector"
-                android:gravity="center|center_horizontal"
-                android:src="@drawable/back"
-                 />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="修改密码"
-                android:layout_centerInParent="true"
-                android:textColor="#333"
-                android:textSize="18sp"
-                />
-
-        </RelativeLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/line_mine_color"
-            ></View>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/line_mine_color"></View>
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:background="@color/color_ffffff"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:orientation="horizontal" >
-
-            <EditText
-                android:id="@+id/oldPswEt"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_weight="1"
-                android:background="@null"
-                android:gravity="center|left"
-                android:hint="请输入原密码"
-                android:textColorHint="#afafaf"
-                android:inputType="phone"
-                android:singleLine="true"
-                android:textSize="16sp" />
-
-            <Button
-                android:id="@+id/getPswBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:layout_marginLeft="16dp"
-                android:background="@drawable/selector_mine_exit_btn_bg"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:singleLine="true"
-                android:text="找回密码"
-                android:textColor="@color/app_theme_color"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-
-            <EditText
-                android:id="@+id/newPswEt"
-                android:layout_width="fill_parent"
-                android:layout_height="48dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:background="@color/color_ffffff"
-                android:gravity="center|left"
-                android:hint="请输入新密码"
-                android:textColorHint="#afafaf"
-                android:inputType="number"
-                android:maxLength="11"
-                android:textSize="16sp" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/line_mine_color"></View>
         <EditText
-            android:id="@+id/againPswEt"
-            android:layout_width="fill_parent"
+            android:id="@+id/oldPswEt"
+            android:layout_width="0dp"
             android:layout_height="48dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:gravity="center|left"
+            android:hint="请输入原密码"
+            android:inputType="textPassword"
+            android:singleLine="true"
+            android:textColorHint="#afafaf"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/getPswBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_marginLeft="16dp"
+            android:background="@drawable/selector_mine_exit_btn_bg"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:background="@color/color_ffffff"
-            android:gravity="center|left"
-            android:hint="请输入新密码"
-            android:textColorHint="#afafaf"
-            android:inputType="number"
-            android:maxLength="11"
+            android:singleLine="true"
+            android:text="找回密码"
+            android:textColor="@color/app_theme_color"
             android:textSize="16sp" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/line_mine_color"></View>
-        <Button
-            android:id="@+id/getCodeNextBtn"
-            android:layout_width="fill_parent"
-            android:layout_height="42dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/selector_submit_btn"
-            android:gravity="center|center_horizontal"
-            android:text="确定修改"
-            android:textColor="@color/white_action"
-            android:textSize="22sp" />
     </LinearLayout>
 
-</RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line_mine_color"></View>
+    <EditText
+        android:id="@+id/newPswEt"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:background="@color/color_ffffff"
+        android:gravity="center|left"
+        android:hint="请输入新密码"
+        android:inputType="textPassword"
+        android:maxLength="11"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:textColorHint="#afafaf"
+        android:textSize="16sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line_mine_color"></View>
+
+    <EditText
+        android:id="@+id/againPswEt"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:background="@color/color_ffffff"
+        android:gravity="center|left"
+        android:hint="请再次输入密码"
+        android:inputType="textPassword"
+        android:maxLength="11"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:textColorHint="#afafaf"
+        android:textSize="16sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line_mine_color"></View>
+
+    <Button
+        android:id="@+id/getCodeNextBtn"
+        android:layout_width="fill_parent"
+        android:layout_height="42dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/selector_submit_btn"
+        android:gravity="center|center_horizontal"
+        android:text="确定修改"
+        android:textColor="@color/white_action"
+        android:textSize="22sp" />
+</LinearLayout>
