--- a/BestarProject/ShoppingMall/res/layout/fragment_user_info.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_user_info.xml
@@ -15,8 +15,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="60dip"
-            android:background="@color/color_ffffff"
+            android:layout_height="@dimen/title_layout_height"
+            android:background="@color/user_title_layout_bg"
             android:padding="0dp"
             android:tag="actionBar"
             tools:ignore="UselessParent">
@@ -25,8 +25,8 @@
                 android:id="@+id/userInfoBack"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:background="@drawable/text_down_selector"
-                android:src="@drawable/back" />
+                android:background="@null"
+                android:src="@drawable/selector_back_btn" />
 
             <TextView
 
@@ -45,6 +45,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/user_bg"
             android:gravity="center_vertical"
             android:scrollbars="none">
 
@@ -52,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@color/app_bg_color"
+                android:background="@color/user_bg"
                 tools:ignore="UselessLeaf">
 
                 <RelativeLayout
@@ -153,7 +154,10 @@
                         android:textColor="#cc333333" />
                 </RelativeLayout>
 
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="@color/line_mine_color"></View>
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -193,6 +197,7 @@
                         android:layout_centerVertical="true"
                         android:gravity="center"
                         android:text="123456"
+                        android:textSize="30sp"
                         android:inputType="textPassword"
                         android:layout_marginRight="20dp"
                         android:layout_toLeftOf="@id/pswArrow"
